; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_sock.c_sock_read.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_sock.c_sock_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fd*, i8*, i64)* @sock_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sock_read(%struct.fd* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.fd*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.fd* %0, %struct.fd** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.fd*, %struct.fd** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @realfs_read(%struct.fd* %8, i8* %9, i64 %10)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.fd*, %struct.fd** %4, align 8
  %13 = call i32 @sock_translate_err(%struct.fd* %12, i32* %7)
  %14 = load i32, i32* %7, align 4
  ret i32 %14
}

declare dso_local i32 @realfs_read(%struct.fd*, i8*, i64) #1

declare dso_local i32 @sock_translate_err(%struct.fd*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
